--- a/app/index.html
+++ b/app/index.html
@@ -56,15 +56,15 @@
     </nav>
 
     <div class="container" ng-view=""></div>
-    
-    <footer class="navbar navbar-default navbar-fixed-bottom">
+
+    <footer class="navbar navbar-default navbar-fixed-bottom" ng-controller="SystemCtrl">
       <div class="container">
         <div class="navbar-header">
           <p class="navbar-text">Made with ♥ by <a href="#" class="navbar-link">Sandhose</a>, <a href="#" class="navbar-link">TheGaudis</a> & <a href="#" class="navbar-link">Tux</a></p>
         </div>
 
         <div class="navbar-right">
-          <p class="navbar-text">Status: <span class="text-success">healthy</span> | Connected to <span class="text-info">Freebox-AFC8A3</span></p>
+          <p class="navbar-text">Status: <span class="text-success">healthy</span> | Connected to <span class="text-info">{{ system.connection }}</span></p>
         </div>
       </div>
     </footer>
@@ -108,6 +108,10 @@
         <!-- build:js({.tmp,app}) scripts/scripts.js -->
         <script src="scripts/app.js"></script>
         <script src="scripts/controllers/main.js"></script>
+        <script src="scripts/controllers/user.js"></script>
+        <script src="scripts/controllers/setup.js"></script>
+        <script src="scripts/controllers/alarm-clock.js"></script>
+        <script src="scripts/controllers/system.js"></script>
         <script src="scripts/controllers/settings.js"></script>
         <!-- endbuild -->
 </body>
